--- a/app/src/main/res/layout/activity_esummit.xml
+++ b/app/src/main/res/layout/activity_esummit.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/es_parent_layout"
@@ -98,6 +99,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
+        android:overScrollMode="never"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/e_summit_date">
 
@@ -149,6 +151,8 @@
                 android:textAlignment="center"
                 android:textColor="@color/colorWhite"
                 android:textSize="35sp" />
+
+
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/es_speaker_rv"
