--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -42,8 +42,7 @@
             app:srcCompat="@drawable/event_bghills"
             android:layout_marginLeft="-40dp"
             android:layout_marginRight="-40dp"
-            android:layout_marginBottom="-5dp"
-            />
+            android:layout_marginBottom="-5dp" />
 
     </LinearLayout>
 
@@ -79,6 +78,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_margin="10dp"
+        android:scrollbars="vertical"
         app:layout_constraintTop_toBottomOf="@+id/event_guideline1"
         app:layout_constraintBottom_toBottomOf="@+id/event_guideline2"/>
 
