--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.58" />
+        app:layout_constraintGuide_percent="0.54" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
@@ -49,14 +49,15 @@
         android:text="Register"
         android:textSize="18sp"
         android:textColor="@color/colorWhite"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="16sp"
-        android:paddingStart="12dp"
-        android:paddingEnd="12dp"
+        app:layout_constraintHorizontal_bias="0.9"
+        android:paddingStart="15dp"
+        android:paddingEnd="15dp"
         android:focusable="true"
         android:clickable="true"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/event_image_guide"
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -78,41 +79,28 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.1" />
+        app:layout_constraintGuide_percent="0.12" />
 
-    <ImageView
+    <com.nitrr.ecell.esummit.ecellapp.misc.SquareImageView
         android:id="@+id/event_img"
-        android:layout_width="180dp"
+        android:layout_width="150dp"
         android:layout_height="0dp"
+        android:padding="10dp"
+        android:layout_margin="10dp"
+        android:layout_gravity="center"
+        app:srcCompat="@drawable/ic_event_bq"
         app:layout_constraintTop_toBottomOf="@id/event_image_guide"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:padding="15dp"
-        android:layout_gravity="center"
-        app:srcCompat="@drawable/ic_event_bq"
         app:layout_constraintBottom_toTopOf="@id/event_detail_guide"
         android:background="@color/black_overlay"/>
-
-    <!--<TextView-->
-    <!--android:id="@+id/event_name"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_below="@+id/event_img"-->
-    <!--android:layout_centerHorizontal="true"-->
-    <!--android:layout_marginTop="10dp"-->
-    <!--android:layout_marginBottom="10dp"-->
-    <!--android:fontFamily="@font/roboto"-->
-    <!--android:text="@string/name"-->
-    <!--android:textAllCaps="true"-->
-    <!--android:textColor="@color/colorWhite"-->
-    <!--android:textSize="20sp" />-->
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/event_detail_guide"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.33" />
+        app:layout_constraintGuide_percent="0.38" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/venue_card"
@@ -131,7 +119,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="18dp"
+        android:padding="10dp"
         android:elevation="2dp"
         app:layout_constraintTop_toBottomOf="@id/event_detail_guide"
         app:layout_constraintStart_toStartOf="parent"
@@ -148,7 +136,7 @@
             android:maxLines="1"
             android:text="Date: 2019-07-29 | Time: 10:00am"
             android:textColor="@color/black"
-            android:textSize="22sp" />
+            android:textSize="18sp" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -167,15 +155,14 @@
                     android:fontFamily="@font/roboto"
                     android:text="Venue: "
                     android:textColor="@color/black"
-                    android:textSize="22sp" />
+                    android:textSize="18sp" />
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:srcCompat="@drawable/ic_placeholder"
                     android:layout_marginStart="5dp"
-                    android:layout_marginEnd="5dp"
-                    android:layout_marginTop="8dp"/>
+                    android:layout_marginEnd="5dp"/>
 
                 <TextView
                     android:id="@+id/event_venue"
@@ -186,7 +173,7 @@
                     android:ellipsize="end"
                     android:textAllCaps="true"
                     android:textColor="@color/black"
-                    android:textSize="22sp" />
+                    android:textSize="18sp" />
 
             </LinearLayout>
 
@@ -197,23 +184,24 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_margin="15dp"
-        app:layout_constraintTop_toBottomOf="@id/guideline1"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_margin="10dp"
+        app:cardCornerRadius="10dp"
+        app:layout_constraintBottom_toBottomOf="@id/guideline2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/guideline2">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/guideline1">
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:padding="4dp">
+            android:layout_margin="10dp"
+            android:overScrollMode="never">
 
             <TextView
                 android:id="@+id/event_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
                 android:fontFamily="@font/roboto"
