--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/login_outer_constraint"
@@ -53,8 +52,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
         android:layout_marginTop="40dp"
+        android:layout_marginEnd="10dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@id/forgot"
         app:layout_constraintEnd_toEndOf="@+id/upper_poly"
@@ -110,11 +109,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
+        android:clickable="true"
+        android:focusable="true"
         android:text="@string/forgot"
         android:textSize="16sp"
         android:textStyle="italic"
-        android:clickable="true"
-        android:focusable="true"
         app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
         app:layout_constraintEnd_toEndOf="@id/upper_poly"
         app:layout_constraintHorizontal_bias="0.85"
@@ -126,45 +125,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
+        android:background="@drawable/button_sign_in"
         android:paddingStart="30dp"
         android:paddingEnd="30dp"
         android:text="@string/sign_in"
         android:textAllCaps="false"
         android:textColor="@color/colorWhite"
         android:textSize="26sp"
-        android:background="@drawable/button_sign_in"
-        app:layout_constraintHorizontal_bias="0.89"
         app:layout_constraintBottom_toTopOf="@id/login_signin_guide"
         app:layout_constraintEnd_toEndOf="@id/upper_poly"
+        app:layout_constraintHorizontal_bias="0.89"
         app:layout_constraintStart_toStartOf="@id/upper_poly"
         app:layout_constraintTop_toBottomOf="@+id/forgot" />
 
-    <!--<com.google.android.material.button.MaterialButton-->
-        <!--android:id="@+id/sign_in_button"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--style="@style/Widget.MaterialComponents.Button"-->
-        <!--android:textAppearance="@style/Widget.MaterialComponents.Button"-->
-        <!--android:layout_marginTop="5dp"-->
-        <!--android:paddingStart="30dp"-->
-        <!--android:paddingEnd="30dp"-->
-        <!--android:text="@string/sign_in"-->
-        <!--android:textAllCaps="false"-->
-        <!--android:textColor="@color/colorWhite"-->
-        <!--android:textSize="26sp"-->
-        <!--app:cornerRadius="30dp"-->
-        <!--app:layout_constraintHorizontal_bias="0.89"-->
-        <!--app:layout_constraintBottom_toTopOf="@id/login_signin_guide"-->
-        <!--app:layout_constraintEnd_toEndOf="@id/upper_poly"-->
-        <!--app:layout_constraintStart_toStartOf="@id/upper_poly"-->
-        <!--app:layout_constraintTop_toBottomOf="@+id/forgot" />-->
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/login_signin_guide"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.05"/>
+        app:layout_constraintGuide_percent="0.05" />
 
     <TextView
         android:id="@+id/to_sign_in_text"
@@ -240,12 +220,12 @@
         android:text="@string/to_register"
         android:textSize="24sp"
         android:textStyle="bold|italic"
-        app:layout_constraintVertical_bias="0.35"
+        app:layout_constraintBottom_toTopOf="@id/login_guide_40"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.18"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_guide_17"
-        app:layout_constraintBottom_toTopOf="@id/login_guide_40"/>
+        app:layout_constraintVertical_bias="0.35" />
 
     <ImageView
         android:id="@+id/ic_lower_ecell"
@@ -355,10 +335,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
+            app:errorEnabled="true"
             app:passwordToggleContentDescription="To Show and Hide Password"
             app:passwordToggleDrawable="@drawable/login_password_eye"
-            app:passwordToggleEnabled="true"
-            app:errorEnabled="true">
+            app:passwordToggleEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/register_password"
@@ -401,24 +381,24 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.87" />
 
-    <com.google.android.material.button.MaterialButton
+    <Button
         android:id="@+id/register_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/Widget.MaterialComponents.Button"
-        android:textAppearance="@style/Widget.MaterialComponents.Button"
-        android:text="@string/register"
-        android:textColor="@color/colorWhite"
-        android:textSize="26sp"
-        android:textAllCaps="false"
-        app:cornerRadius="30dp"
+        android:background="@drawable/button_sign_in"
         android:paddingStart="30dp"
         android:paddingEnd="30dp"
+        android:text="@string/register"
+        android:textAllCaps="false"
+        android:textAppearance="@style/Widget.MaterialComponents.Button"
+        android:textColor="@color/colorWhite"
+        android:textSize="26sp"
+        app:cornerRadius="30dp"
+        app:layout_constraintBottom_toTopOf="@id/login_guide_95"
+        app:layout_constraintEnd_toEndOf="@id/lower_poly"
         app:layout_constraintHorizontal_bias="0.8"
         app:layout_constraintStart_toStartOf="@id/lower_poly"
-        app:layout_constraintTop_toBottomOf="@+id/login_guide_83"
-        app:layout_constraintEnd_toEndOf="@id/lower_poly"
-        app:layout_constraintBottom_toTopOf="@id/login_guide_95"/>
+        app:layout_constraintTop_toBottomOf="@+id/login_guide_83" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/login_guide_95"
