--- a/app/src/main/res/layout/layout_cardview_event.xml
+++ b/app/src/main/res/layout/layout_cardview_event.xml
@@ -1,52 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/event_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="-3dp"
         android:layout_marginStart="-2.75dp"
+        android:layout_marginTop="-3dp"
         android:layout_marginBottom="-2dp"
-        app:cardBackgroundColor="@color/transparent"
+        android:clickable="true"
         android:focusable="true"
-        android:clickable="true">
+        app:cardBackgroundColor="@color/transparent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <ImageView
                 android:id="@+id/event_bg"
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
                 android:background="@color/colorWhite"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/event_img"
+                android:layout_width="match_parent"
+                android:layout_height="120dp"
+                android:layout_marginTop="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
-        <ImageView
-            android:id="@+id/event_img"
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
-            app:srcCompat="@drawable/ic_events"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="20dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+                app:srcCompat="@drawable/ic_events" />
 
             <TextView
                 android:id="@+id/event_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/name"
-                android:textSize="15sp"
-                android:paddingBottom="5dp"
-                android:textColor="@color/colorLightBlack"
                 android:layout_marginTop="20dp"
-                app:layout_constraintTop_toBottomOf="@+id/event_img"
+                android:paddingBottom="5dp"
+                android:text="@string/name"
+                android:textColor="@color/colorLightBlack"
+                android:textSize="15sp"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintTop_toBottomOf="@+id/event_img" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
