Speakers all years added

--- a/app/src/main/res/layout/activity_esummit.xml
+++ b/app/src/main/res/layout/activity_esummit.xml
@@ -153,6 +153,7 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:padding="10dp"
+                    android:indeterminate="true"
                     android:theme="@style/AppTheme.WhiteAccent"
                     android:layout_weight="1"/>
 
