--- a/app/src/main/res/layout/fragment_email.xml
+++ b/app/src/main/res/layout/fragment_email.xml
@@ -9,7 +9,7 @@
     android:focusable="true"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.forgotPassword.EmailFragment"
-    android:background="#ff68a2"
+    android:background="#fff"
     android:elevation="2dp"
     tools:targetApi="lollipop">
 
@@ -37,11 +37,11 @@
         android:id="@+id/forgot_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/bebas_neue"
         android:paddingTop="10dp"
         android:text="Forgot Your Password?"
         android:textAlignment="center"
         android:textSize="35sp"
-        android:fontFamily=""
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/forgot_guide" />
@@ -50,21 +50,21 @@
         android:id="@+id/forgot_body"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="casual"
-        android:textSize="20sp"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
-        android:textAlignment="center"
+        android:fontFamily="@font/roboto"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
         android:text="No Problem . . .\nYou just need to enter your registered Email-ID to Reset your Password"
-        app:layout_constraintTop_toBottomOf="@id/forgot_title"
-        app:layout_constraintBottom_toTopOf="@id/forgot_edit_guide"/>
+        android:textAlignment="center"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@id/forgot_edit_guide"
+        app:layout_constraintTop_toBottomOf="@id/forgot_title"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/forgot_edit_guide"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.6"/>
+        app:layout_constraintGuide_percent="0.55"/>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/forgot_email_layout"
@@ -90,54 +90,32 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <!--<com.google.android.material.textfield.TextInputLayout-->
-        <!--android:id="@+id/forgot_email_layout"-->
-        <!--android:theme="@style/TextLabel"-->
-        <!--style="@style/ForgotTextInputLayoutStyle"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--app:boxBackgroundColor="#ff68a2"-->
-        <!--app:errorTextAppearance="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
-        <!--android:textAppearance="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
-        <!--app:layout_constraintStart_toStartOf="parent"-->
-        <!--app:layout_constraintEnd_toEndOf="parent"-->
-        <!--app:layout_constraintTop_toBottomOf="@id/forgot_edit_guide"-->
-        <!--app:errorEnabled="true">-->
-
-        <!--<com.google.android.material.textfield.TextInputEditText-->
-            <!--android:id="@+id/forgot_email"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:textSize="20sp"-->
-            <!--android:textColor="@color/colorWhite"-->
-            <!--android:inputType="textEmailAddress"-->
-
-            <!--android:hint="Registered Email" />-->
-
-    <!--</com.google.android.material.textfield.TextInputLayout>-->
-
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/forgot_button_guide"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.85"/>
+        app:layout_constraintGuide_percent="0.8"/>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/forgot_verify"
-        style="@style/Widget.MaterialComponents.Button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="150dp"
-        android:layout_marginEnd="30dp"
-        android:fontFamily="@font/acme"
-        android:text="Verify"
-        android:textAppearance="@style/Widget.MaterialComponents.Button"
-        android:textColor="@color/colorWhite"
-        android:textSize="30sp"
-        app:cornerRadius="30dp"
-        app:layout_constraintTop_toBottomOf="@id/forgot_button_guide"
-        app:rippleColor="#5d65ff"
-        tools:layout_editor_absoluteX="150dp" />
+    android:id="@+id/forgot_verify"
+    style="@style/Widget.MaterialComponents.Button"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="150dp"
+    android:layout_marginEnd="30dp"
+    android:fontFamily="@font/acme"
+    android:text="Verify"
+    android:textAppearance="@style/Widget.MaterialComponents.Button"
+    android:textColor="@color/colorWhite"
+    android:textSize="30sp"
+    app:cornerRadius="30dp"
+    app:layout_constraintTop_toBottomOf="@id/forgot_button_guide"
+    app:rippleColor="#5d65ff"
+    tools:layout_editor_absoluteX="150dp" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!--ff68a2-->
