--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -29,7 +29,7 @@
     <color name="blue">#3498DB</color>
     <color name="light_blue">#85C1E9</color>
     <color name="green">#1D8348</color>
-    <color name="forgot_button">#ffac5d</color>
+    <color name="forgot_button">#ff68a2</color>
     <color name="change_pass_button">#ff3ea7</color>
     <color name="dirt_blue">#416A87</color>
     <color name="dark_blue">#5275A1</color>
