--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -10,6 +10,7 @@
         <item>@font/bungee_shade</item>
         <item>@font/corben</item>
         <item>@font/cormorant_semibold</item>
+        <item>@font/lato</item>
         <item>@font/lemon</item>
         <item>@font/montserrat_subrayada</item>
         <item>@font/noto_sans_bold</item>
