--- a/app/src/main/res/layout/fragment_email.xml
+++ b/app/src/main/res/layout/fragment_email.xml
@@ -111,8 +111,7 @@
     android:textSize="30sp"
     app:cornerRadius="30dp"
     app:layout_constraintTop_toBottomOf="@id/forgot_button_guide"
-    app:rippleColor="#5d65ff"
-    tools:layout_editor_absoluteX="150dp" />
+    app:rippleColor="#5d65ff" />
 
 
 
